--- a/ess-example-all/ess-example-goods/src/main/resources/application.properties
+++ b/ess-example-all/ess-example-goods/src/main/resources/application.properties
@@ -29,3 +29,50 @@ spring.cloud.sentinel.log.dir=d:/data/logs/
 management.endpoints.web.exposure.include=*
 logging.level.com.alibaba.fastjson=debug
 #spring.zipkin.sender.type=RABBIT
+
+
+
+#mybatis
+mybatis.type-aliases-package=tk.mybatis.springboot.model
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+#mapper
+#mappers 多个接口时逗号隔开
+#mapper.mappers[0]=com.ess.framework.mapper.AbstractMapper
+#mapper.mappers=com.ess.framework.mapper.AbstractMapper
+mapper.not-empty=false
+mapper.identity=MYSQL
+
+#pagehelper
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+
+swagger.enabled=true
+
+
+swagger.title=spring-boot-starter-swagger
+swagger.description=Starter for swagger 2.x
+swagger.version=1.1.0.RELEASE
+swagger.license=Apache License, Version 2.0
+swagger.licenseUrl=https://www.apache.org/licenses/LICENSE-2.0.html
+swagger.termsOfServiceUrl=https://github.com/dyc87112/spring-boot-starter-swagger
+swagger.contact.name=luozelin
+swagger.contact.url=http://www.233.com
+swagger.contact.email=yykk500@qq.com
+swagger.base-package=com.ess.example.goods.web
+
+#swagger.ignored-parameter-types[0]=com.didispace.demo.User
+
+swagger.apply-default-response-messages=true
+swagger.global-response-message.get[0].code=401
+swagger.global-response-message.get[0].message=401get
+swagger.global-response-message.get[1].code=500
+swagger.global-response-message.get[1].message=500get
+swagger.global-response-message.get[1].modelRef=ERROR
+
+swagger.ui-config.json-editor=false
+swagger.ui-config.show-request-headers=true
+swagger.ui-config.request-timeout=5000
+swagger.ui-config.submit-methods=get,delete
