--- a/ess-example-all/ess-example-goods/src/main/resources/bootstrap.properties
+++ b/ess-example-all/ess-example-goods/src/main/resources/bootstrap.properties
@@ -35,7 +35,7 @@ spring.cloud.nacos.config.extension-configs[0].group=DEFAULT_GROUP
 # 引入cache.properties、mq.properties、mybatis.properties
 spring.cloud.nacos.config.extension-configs[1]=cache.properties
 spring.cloud.nacos.config.extension-configs[2]=mq.properties
-spring.cloud.nacos.config.extension-configs[3]=mybatis.properties
+#spring.cloud.nacos.config.extension-configs[3]=mybatis.properties
 
 
 # 支持哪些共享配置的 Data Id 在配置变化时，应用中是否可动态刷新， 感知到最新的配置值，多个 Data Id 之间用逗号隔开。如果没有明确配置，默认情况下所有共享配置的 Data Id 都不支持动态刷新。
