--- a/ess-framework-all/ess-framework-boot/pom.xml
+++ b/ess-framework-all/ess-framework-boot/pom.xml
@@ -45,6 +45,12 @@
 			<artifactId>fastjson</artifactId>
 		</dependency>
 
+		<!-- Swagger API文档-->
+		<dependency>
+			<groupId>com.spring4all</groupId>
+			<artifactId>swagger-spring-boot-starter</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
