--- a/ess-framework-all/ess-framework-gateway/pom.xml
+++ b/ess-framework-all/ess-framework-gateway/pom.xml
@@ -59,6 +59,14 @@
 		<finalName>ess-gateway</finalName>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<!--<version>2.8.2</version>	-->
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
