--- a/ess-example-all/ess-example-goods/src/main/resources/application.properties
+++ b/ess-example-all/ess-example-goods/src/main/resources/application.properties
@@ -51,7 +51,7 @@ pagehelper.params=count=countSql
 
 swagger.enabled=true
 
-
+swagger.authorization.type=
 swagger.title=spring-boot-starter-swagger
 swagger.description=Starter for swagger 2.x
 swagger.version=1.1.0.RELEASE
