--- a/ess-framework-all/pom.xml
+++ b/ess-framework-all/pom.xml
@@ -168,6 +168,12 @@
 				<artifactId>swagger-spring-boot-starter</artifactId>
 				<version>1.9.1.RELEASE</version>
 			</dependency>
+			<!-- Swagger 注解-->
+			<dependency>
+				<groupId>io.swagger</groupId>
+				<artifactId>swagger-annotations</artifactId>
+				<version>1.5.20</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
