--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,12 @@ dump.rdb
 
 ### IntelliJ IDEA ###
 .idea/
+.idea/*.xml
 *.iws
 *.iml
 *.ipr
 *.DS_Store
+
 
 ### NetBeans ###
 nbproject/private/
