--- a/ess-framework-all/ess-framework-boot/pom.xml
+++ b/ess-framework-all/ess-framework-boot/pom.xml
@@ -43,7 +43,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+            <exclusions>
+                <exclusion>
+                    <artifactId>HdrHistogram</artifactId>
+                    <groupId>org.hdrhistogram</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
 		<!-- FastJson -->
 		<dependency>
