--- a/ess-framework-all/ess-framework-boot/pom.xml
+++ b/ess-framework-all/ess-framework-boot/pom.xml
@@ -13,7 +13,6 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-
 	</properties>
 
 	<dependencies>
@@ -32,6 +31,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-json</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- devtools 热部署插件 -->
 		<dependency>
@@ -61,6 +66,12 @@
 		<dependency>
 			<groupId>com.spring4all</groupId>
 			<artifactId>swagger-spring-boot-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>jackson-annotations</artifactId>
+					<groupId>com.fasterxml.jackson.core</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
