--- a/ess-framework-all/ess-framework-boot/pom.xml
+++ b/ess-framework-all/ess-framework-boot/pom.xml
@@ -20,6 +20,20 @@
 		<dependency>
 			<groupId>com.ess</groupId>
 			<artifactId>ess-framework-api</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>jackson-core</artifactId>
+					<groupId>com.fasterxml.jackson.core</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jackson-databind</artifactId>
+					<groupId>com.fasterxml.jackson.core</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jackson-annotations</artifactId>
+					<groupId>com.fasterxml.jackson.core</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
@@ -53,7 +67,11 @@
                     <artifactId>HdrHistogram</artifactId>
                     <groupId>org.hdrhistogram</groupId>
                 </exclusion>
-            </exclusions>
+			<!--	<exclusion>
+					<artifactId>jackson-databind</artifactId>
+					<groupId>com.fasterxml.jackson.core</groupId>
+				</exclusion>-->
+			</exclusions>
         </dependency>
 
 		<!-- FastJson -->
@@ -66,12 +84,14 @@
 		<dependency>
 			<groupId>com.spring4all</groupId>
 			<artifactId>swagger-spring-boot-starter</artifactId>
+			<!--
 			<exclusions>
 				<exclusion>
 					<artifactId>jackson-annotations</artifactId>
 					<groupId>com.fasterxml.jackson.core</groupId>
 				</exclusion>
 			</exclusions>
+			-->
 		</dependency>
 
 		<dependency>
