--- a/ess-example-all/ess-example-goods/src/main/resources/application.properties
+++ b/ess-example-all/ess-example-goods/src/main/resources/application.properties
@@ -76,3 +76,5 @@ swagger.ui-config.json-editor=false
 swagger.ui-config.show-request-headers=true
 swagger.ui-config.request-timeout=5000
 swagger.ui-config.submit-methods=get,delete
+
+spring.http.converters.preferred-json-mapper.jackson=false
