更新鉴权和工具类

--- a/ess-example-all/ess-example-goods/pom.xml
+++ b/ess-example-all/ess-example-goods/pom.xml
@@ -61,6 +61,10 @@
             <artifactId>ess-example-service</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
