--- a/ess-framework-all/ess-framework-gateway/src/main/resources/application.properties
+++ b/ess-framework-all/ess-framework-gateway/src/main/resources/application.properties
@@ -51,3 +51,5 @@
 #spring.zipkin.rabbitmq.addresses=rabbitmq.233.com:5672
 #spring.zipkin.rabbitmq.queue=zipkin-queue
 #spring.zipkin.message-timeout=3000
+
+spring.cloud.gateway.discovery.locator.enabled=true
