--- a/ess-framework-all/pom.xml
+++ b/ess-framework-all/pom.xml
@@ -174,6 +174,33 @@
 				<artifactId>swagger-annotations</artifactId>
 				<version>1.5.20</version>
 			</dependency>
+
+			<!-- JWT -->
+			<dependency>
+				<groupId>io.jsonwebtoken</groupId>
+				<artifactId>jjwt-api</artifactId>
+				<version>0.11.1</version>
+			</dependency>
+			<dependency>
+				<groupId>io.jsonwebtoken</groupId>
+				<artifactId>jjwt-impl</artifactId>
+				<version>0.11.1</version>
+				<scope>runtime</scope>
+			</dependency>
+			<dependency>
+				<groupId>io.jsonwebtoken</groupId>
+				<artifactId>jjwt-jackson</artifactId>
+				<version>0.11.1</version>
+				<scope>runtime</scope>
+			</dependency>
+
+
+			<!-- commons-lang3 工具类 -->
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.9</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
